results/SpecGenBench/2-shot/log-AddLoopFor-2023_11_28_07_19_01.txt
public class AddLoopFor {
    //@ ensures \result == x + y;
    public static int addLoop(int x, int y) {
        int sum = y;
        //@ maintaining sum == y + (\sum int i; 0 <= i && i < x; 1);
        //@ decreases x;
        if (x > 0) {
            for(int n = x; n > 0; n = n - 1) {
                sum = sum + 1;
            }
        } else {
            //@ maintaining sum == y - (\sum int i; 0 <= i && i < -x; 1);
            //@ decreases -x;
            for(int n = -x; n > 0; n = n - 1) {
                sum = sum - 1;
            }
        }
        return sum;
    }
}
/home/max/Documents/JMLGPT/tmp/AddLoopFor.java:5: error: Loop specifications must immediately precede a loop statement
        //@ maintaining sum == y + (\sum int i; 0 <= i && i < x; 1);
            ^
1 error

